# apohara-argus

./: .bestpractices.json  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-LICENSES  about.hbs  about.toml  aislop-score.json  deny.toml
.agents/skills/apohara-argus/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: apohara-argus-instincts.yaml
.claude/skills/apohara-argus/: SKILL.md
.codex/: AGENTS.md
.github/: app-listing.md  dependabot.yml
.github/workflows/: _attest.yml  aislop.yml  bench.yml  ci.yml  codeql.yml  fuzz.yml  publish-crates.yml  publish.yml  release.yml
crates/apohara-argus-cli/: Cargo.toml
crates/apohara-argus-cli/src/: main.rs
crates/apohara-argus-core/: Cargo.toml
crates/apohara-argus-core/prompts/: 03-architecture-fit.md
crates/apohara-argus-core/src/: config.rs  errors.rs  lib.rs  prompts.rs
crates/apohara-argus-mcp/: Cargo.toml
crates/apohara-argus-mcp/src/: lib.rs  main.rs
crates/argus-agent/: Cargo.toml
crates/argus-agent/src/: lib.rs
crates/argus-api/: Cargo.toml
crates/argus-benchmarks/: Cargo.toml  README.md
crates/argus-benchmarks/benches/: cost.rs  latency.rs  precision_recall.rs
crates/argus-benchmarks/data/: labels.json  prs.jsonl
crates/argus-benchmarks/src/: dataset.rs  lib.rs  mock_nim.rs
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: main.rs
crates/argus-core/: Cargo.toml
crates/argus-core/prompts/: 01-slop-detector.md  02-redteam-security.md  04-verdict-synthesizer.md
crates/argus-core/src/: config.rs  errors.rs  lib.rs  prompts.rs  types.rs
crates/argus-crypto/: Cargo.toml
crates/argus-crypto/src/: chain.rs  identity.rs  lib.rs  spiffe_id.rs
crates/argus-dashboard/: Cargo.toml  DEPLOY.md  Dockerfile  fly.toml
crates/argus-dashboard/src/: lib.rs  main.rs  premium.rs  state.rs  templates.rs
crates/argus-dashboard/static/: app.js  chain.json  demo-result.json  samples.json
crates/argus-dashboard/tests/: premium_gate.rs
crates/argus-github/: Cargo.toml
crates/argus-github-app/: Cargo.toml  Dockerfile  README.md  fly.toml
crates/argus-github-app/src/: app_state.rs  cordon.rs  lib.rs  main.rs  setup.rs  signature.rs  webhook.rs
crates/argus-github-app/tests/: webhook_integration.rs
crates/argus-github/src/: lib.rs
crates/argus-guard/: Cargo.toml
crates/argus-guard/src/: lib.rs  main.rs
crates/argus-lens/: Cargo.toml
crates/argus-lens/src/: lib.rs  main.rs
crates/argus-llm/: Cargo.toml
crates/argus-llm/examples/: nim_smoke.rs
crates/argus-llm/src/: audit.rs  circuit_breaker.rs  dalle.rs  heygen.rs  lib.rs  mock.rs  model_registry.rs  nim.rs  openai_compat.rs  retry.rs  test_util.rs
crates/argus-mcp/: Cargo.toml
crates/argus-mcp/src/: lib.rs  main.rs
crates/argus-otel/: Cargo.toml
crates/argus-otel/src/: lib.rs
crates/argus-slop/: Cargo.toml
crates/argus-slop/src/: architecture.rs  deterministic.rs  lib.rs  pipeline.rs  security.rs  slop_detector.rs  verdict.rs
crates/argus-slop/tests/: pipeline_e2e.rs  pipeline_mock.rs
crates/argus-verify/: Cargo.toml
crates/argus-verify/src/: audit_store.rs  audit_store_sqlite.rs  cache.rs  lib.rs  main.rs  routes.rs  shutdown.rs
crates/argus-verify/tests/: export.rs  shutdown.rs
crates/empty-sqlx-mysql/: Cargo.toml
crates/empty-sqlx-mysql/src/: lib.rs
deploy/: Dockerfile  README.md  build_static.sh
docs/: BENCHMARK.md  CI-VERIFICATION.md  HANDS-ON-QA.md  MEGAPROMPT-PERPLEXITY.md  SCOPE-FIDELITY.md  VERIFICATION.md  agent-spec.md  best-practices-silver.md  branch-protection.md  coverage.md  demo-script.md  dependency-audit.md  for-ciso.md  implementation-status.md  iteration-roadmap.md  numbers.md  plan-supremum-implementation.md  platzi-posts.md  pricing.md  supremum-roadmap.md  thesis.md  wave-5-dispatch-plan.md
docs/briefings/: latest.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: argus_slop_deterministic.rs  argus_verify_signature.rs
npm/: .npmignore  README.md  package.json
npm/.github/workflows/: publish-npm.yml
npm/scripts/: install.js  postinstall.js
npm/test/: test-install.js  test-install.sh
tests/ci/: test_aislop_ci.sh
tests/fixtures/: audit_event.json
