[workspace]
resolver = "2"
members = [
  "crates/argus-core",
  "crates/argus-crypto",
  "crates/argus-llm",
  "crates/argus-slop",
  "crates/argus-github",
  "crates/argus-guard",
  "crates/argus-verify",
  "crates/argus-lens",
  "crates/argus-agent",
  "crates/argus-dashboard",
  "crates/argus-cli",
  "crates/argus-otel",
  "crates/argus-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Apohara <apohara.dev>"]
description = "AI slop defense layer for code review (PR review, pre-commit guard, MCP server, audit chain)"
repository = "https://github.com/SuarezPM/apohara-argus"
homepage = "https://github.com/SuarezPM/apohara-argus"
documentation = "https://docs.rs/argus-cli"
readme = "README.md"
keywords = ["ai", "code-review", "mcp", "eu-ai-act", "byok", "rust"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "api-bindings"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web (Axum)
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# DB (Supabase = PostgreSQL + SQLite for local audit persistence)
# sqlx 0.7 is MSRV 1.88 compatible (0.9 needs 1.94).
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "macros", "migrate"] }

# Templating (SSR for dashboard)
askama = "0.12"
askama_axum = "0.4"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
# SPIFFE identity (v0.16, MSRV 1.88) — spec-conformant SpiffeId + TrustDomain.
# Default features (empty) gives us the core types; feature-gate JWT/Workload-API
# on later items (8.3+) when we actually mint JWT-SVIDs.
spiffe = "0.16"

# Util
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry [Refs: 6.3] — stdout exporter, no external collector
# needed. Use the official `opentelemetry` and `opentelemetry_sdk` crates,
# pinned to the same minor to avoid the API churn across versions.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.27", features = ["trace"] }
tracing-opentelemetry = "0.28"

# MCP (Model Context Protocol) — official Rust SDK.
# [Refs: 5] Exposes ARGUS's 4 specialists as MCP tools to Claude Code /
# Codex / Cursor. Version 0.5 has the `#[tool]` macro API; `schemars` is
# a direct dep (rmcp 0.5 does not re-export it). Must be >=1.0 for
# `json_schema()` method that rmcp's macro calls. The `transport-io`
# feature gates the stdio transport module (not `transport-stdio`).
rmcp = { version = "0.5", features = ["server", "transport-io", "macros"] }
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
url = "2"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# Markdown parsing (para los prompts .md)
pulldown-cmark = "0.10"

# Syn AST (for argus-slop deterministic pre-flight analyzer, item 5.1).
# `visit` powers recursive AST walks; `full` enables every node type
# (Item, Expr, Stmt, Pat, etc.) so we can match function bodies deeply.
# `extra-traits` gives Eq/Hash on AST nodes for free.
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"

# Plotting (slop radar SVG generation, fallback si no hay DALL-E)
plotters = "0.3"

# Internal crate deps
argus-core = { path = "crates/argus-core" }
argus-crypto = { path = "crates/argus-crypto" }
argus-llm = { path = "crates/argus-llm" }
argus-slop = { path = "crates/argus-slop" }
argus-github = { path = "crates/argus-github" }
argus-guard = { path = "crates/argus-guard" }
argus-verify = { path = "crates/argus-verify" }
argus-lens = { path = "crates/argus-lens" }
argus-agent = { path = "crates/argus-agent" }
argus-otel = { path = "crates/argus-otel" }
argus-mcp = { path = "crates/argus-mcp" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
