[workspace]
resolver = "2"
members = [
  "crates/apohara-argus-core",
  "crates/argus-crypto",
  "crates/argus-llm",
  "crates/argus-slop",
  "crates/argus-github",
  "crates/argus-guard",
  "crates/argus-verify",
  "crates/argus-lens",
  "crates/argus-agent",
  "crates/argus-dashboard",
  "crates/apohara-argus-cli",
  "crates/argus-otel",
  "crates/apohara-argus-mcp",
  "crates/argus-benchmarks",
  "crates/argus-github-app",
]

# The `fuzz/` subdirectory is INTENTIONALLY NOT in the
# `members` list above: cargo-fuzz requires nightly Rust
# (libFuzzer's `link_cfg` internals) and the parent
# workspace pins to stable 1.88. Adding the `cargo-fuzz
# = true` metadata marker here opts the workspace into
# cargo-fuzz's subdirectory resolution: `cargo fuzz build`
# from the workspace root will find `fuzz/Cargo.toml`
# even though the fuzz dir is not a workspace member.
# See .github/workflows/fuzz.yml for the nightly-Rust
# CI job that uses this opt-in.
[workspace.metadata]
cargo-fuzz = true

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Apohara <apohara.dev>"]
description = "AI slop defense layer for code review (PR review, pre-commit guard, MCP server, audit chain)"
repository = "https://github.com/SuarezPM/apohara-argus"
homepage = "https://github.com/SuarezPM/apohara-argus"
documentation = "https://docs.rs/apohara-argus-cli"
readme = "README.md"
keywords = ["ai", "code-review", "mcp", "eu-ai-act", "byok"]
categories = ["command-line-utilities", "development-tools::cargo-plugins", "api-bindings"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Web (Axum 0.8 line — coordinates with the `tower` 0.5
# bump that dependabot PR #6 was blocked on). The 0.8
# major bump stabilises the `async fn in trait` story
# and aligns with `tower` 0.5 + `hyper` 1.x. The features
# list is unchanged; the breaking changes are:
#   * `Router::new().route(...)` — `Handler` trait
#     changes; `impl IntoResponse` returns are unchanged.
#   * `axum::serve(listener, app)` —
#     `with_graceful_shutdown` is the same.
#   * `FromRequest` / `FromRequestParts` — derive macros
#     moved to `axum_macros` 0.5 with slightly different
#     bounds.
#   * `tower_http` 0.6 — `TraceLayer` builder tightened.
# Closes dependabot PR #6 (tower 0.4→0.5) and tracking
# issue #10.
axum = { version = "0.8", features = ["ws", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# DB (Supabase = PostgreSQL + SQLite for local audit persistence)
# sqlx 0.7 is MSRV 1.88 compatible (0.9 needs 1.94).
# sqlx 0.8.1 is required to clear the RustSEC-2024-0363 advisory
# (binary protocol misinterpretation) and the three
# RUSTSEC-2026-{0098,0099,0104} advisories on rustls-webpki 0.101
# (the old sqlx 0.7.4 pulled in rustls 0.21, which required
# rustls-webpki ^0.101.7 — the constraint is incompatible with
# the fixed 0.103.x line). The 0.8 major bump carries the
# same feature list and the same `query!` / `query_as!`
# derive-macro surface the workspace already uses.
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "uuid", "chrono", "macros", "migrate"] }

# Templating (SSR for dashboard)
askama = "0.12"
askama_axum = "0.4"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
# SPIFFE identity (v0.16, MSRV 1.88) — spec-conformant SpiffeId + TrustDomain.
# Default features (empty) gives us the core types; feature-gate JWT/Workload-API
# on later items (8.3+) when we actually mint JWT-SVIDs.
spiffe = "0.16"

# Util
anyhow = "1"
# thiserror 2.0 dropped the `.description()` method on the
# generated `Error` impl. The workspace never called
# `.description()` directly (verified by `grep -rn '\.description()'
# crates/*/src/` → 0 hits), so the 1.0→2.0 major bump is
# config-only — every `#[error("…")]` and
# `#[error(transparent)]` attribute continues to work as
# before. Closes dependabot PR #8 (thiserror 1.0.69→2.0.18)
# and the tracking issue #11.
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry [Refs: 6.3] — stdout exporter, no external collector
# needed. Use the official `opentelemetry` and `opentelemetry_sdk` crates,
# pinned to the same minor to avoid the API churn across versions.
#
# 0.32 (not 0.27) is required by `tracing-opentelemetry 0.33`. The 0.27
# pin was the right call when `tracing-opentelemetry` was 0.28 (the old
# minor) but dependabot PR #7 bumped the tracing-opentelemetry minor
# without a coordinated bump of the underlying opentelemetry stack, which
# produces a lockfile with two `opentelemetry` majors (0.27.1 used by
# `argus-otel` itself, 0.32.0 pulled in by tracing-opentelemetry 0.33).
# That double-version is what broke the `try_init()` call in
# `argus-otel/src/lib.rs:78-82` — the `OpenTelemetryLayer<S, T>` from
# 0.33 carries a different T than the `provider.tracer()` return type
# from 0.27, so the `Layered<OpenTelemetryLayer<…>, …>` chain loses its
# `Into<Dispatch>` / `SubscriberInitExt` impl. Aligning to 0.32 across
# the workspace makes both crates see the same `Tracer` type and
# restores the trait chain.
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.32", features = ["trace"] }
tracing-opentelemetry = "0.33"

# MCP (Model Context Protocol) — official Rust SDK.
# [Refs: 5] Exposes ARGUS's 4 specialists as MCP tools to Claude Code /
# Codex / Cursor. Version 0.5 has the `#[tool]` macro API; `schemars` is
# a direct dep (rmcp 0.5 does not re-export it). Must be >=1.0 for
# `json_schema()` method that rmcp's macro calls.
#
# The feature flags we enable are INTENTIONALLY minimal:
#   * `server`   — server-side `ServerHandler` trait + request router
#   * `transport-io` — stdio transport (the only one we use; see
#     `crates/apohara-argus-mcp/src/main.rs:16` which calls
#     `.serve(stdio())`).
#   * `macros`   — `#[tool]` proc macro for the 4 specialist tools
#
# We do NOT enable `transport-streamable-http` (the HTTP/TCP
# transport module). Dependabot flags
# RUSTSEC-{DNS-rebinding-or-similar} against the `rmcp` crate
# because the Streamable HTTP transport (a different feature we
# don't enable) has a known attack surface. The fix is to
# opt OUT of that transport explicitly; the apohara-argus-mcp
# binary's attack surface is the stdio pipe between the MCP
# client and our process, which has no DNS-rebinding vector.
# If we ever need the HTTP transport (e.g. for a hosted MCP
# server), we'll need to bump rmcp to a version that
# patches the DNS-rebinding vector and add explicit
# `Host` header allow-listing at startup.
rmcp = { version = "1.4", features = ["server", "transport-io", "macros"] }
schemars = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
url = "2"
base64 = "0.22"
hex = "0.4"
rand = "0.8"

# HMAC + SHA-256 for GitHub App webhook signature verification.
# `subtle` provides constant-time comparison (timing-attack defense).
# Versions pinned to the ones already resolved transitively in
# Cargo.lock (subtle 2.6, hmac 0.12, sha2 0.10) so adding this
# crate introduces no new resolution work.
hmac = "0.12"
sha2 = "0.10"
subtle = "2"

# Markdown parsing (para los prompts .md)
pulldown-cmark = "0.13"

# Syn AST (for argus-slop deterministic pre-flight analyzer, item 5.1).
# `visit` powers recursive AST walks; `full` enables every node type
# (Item, Expr, Stmt, Pat, etc.) so we can match function bodies deeply.
# `extra-traits` gives Eq/Hash on AST nodes for free.
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
quote = "1"

# Plotting (slop radar SVG generation, fallback si no hay DALL-E)
plotters = "0.3"

# Internal crate deps (version required for cargo publish even though these
# crates are publish=false; the path is for workspace development, the
# version is what cargo records in the published tarball's Cargo.toml)
apohara-argus-core = { version = "0.1.0", path = "crates/apohara-argus-core" }
argus-crypto    = { version = "0.1.0", path = "crates/argus-crypto" }
argus-llm       = { version = "0.1.0", path = "crates/argus-llm" }
argus-slop      = { version = "0.1.0", path = "crates/argus-slop" }
argus-github    = { version = "0.1.0", path = "crates/argus-github" }
argus-guard     = { version = "0.1.0", path = "crates/argus-guard" }
argus-verify    = { version = "0.1.0", path = "crates/argus-verify" }
argus-lens      = { version = "0.1.0", path = "crates/argus-lens" }
argus-agent     = { version = "0.1.0", path = "crates/argus-agent" }
argus-dashboard = { version = "0.1.0", path = "crates/argus-dashboard" }
apohara-argus-cli       = { version = "0.1.0", path = "crates/apohara-argus-cli" }
argus-otel      = { version = "0.1.0", path = "crates/argus-otel" }
apohara-argus-mcp       = { version = "0.1.0", path = "crates/apohara-argus-mcp" }
argus-benchmarks = { path = "crates/argus-benchmarks" }
argus-github-app = { path = "crates/argus-github-app" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
