[package]
name = "apohara-argus-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# The fuzzer binary is built with `cargo fuzz run <target>`. The
# default toolchain is nightly (libFuzzer's `#![feature(...)]`
# internals require it), so CI installs `dtolnay/rust-toolchain`
# with the `nightly` channel before invoking the fuzzer. We
# pin to specific dependencies so a libFuzzer ABI change can't
# silently break the corpus across runs.

[dependencies]
# Targets (we fuzz the public surface of these crates).
# Each fuzz target in `fuzz_targets/` depends on exactly
# the subset it needs; the unused crate deps stay here
# so future targets can pull them in without editing the
# manifest. The fuzz workspace is intentionally separate
# from the parent workspace (see `[workspace]` at the
# bottom of this file): the parent pins stable 1.88,
# cargo-fuzz requires nightly for libFuzzer's
# `#![feature(link_cfg)]` internals.
argus-slop      = { path = "../crates/argus-slop" }
argus-verify    = { path = "../crates/argus-verify" }
argus-otel      = { path = "../crates/argus-otel" }
apohara-argus-core = { path = "../crates/apohara-argus-core" }
# `argus-github-app` is the GitHub App binary crate; its
# `signature` module hosts the HMAC-SHA256 verifier the
# second fuzz target attacks. We import the path dep
# rather than the workspace `{ workspace = true }` short
# form because the parent workspace pins the version and
# we want the fuzz build to track the local copy in
# `crates/argus-github-app` (not a tagged release).
argus-github-app = { path = "../crates/argus-github-app" }

# libFuzzer's nightly-only features (`#![feature(link_cfg)]`
# and similar) are pulled in by `cargo fuzz`'s own proc macros;
# we do not enable any of them in our own targets. The
# targets only need `libfuzzer-sys` for the `fuzz_target!`
# macro and `Arbitrary` derive.
libfuzzer-sys = "0.4"

[profile.release]
debug-assertions = true
# libFuzzer's coverage instrumentation needs the
# `sanitizer-coverage` LLVM pass; that's enabled by
# cargo-fuzz's wrapper, not here.

# Prevent this workspace from interfering with the parent
# workspace's `cargo test`, `cargo clippy`, etc. The fuzz
# targets require nightly Rust; the parent workspace pins
# to stable 1.88. They share `target/` but produce
# incompatible artifacts.
[workspace]
