[package]
name = "argus-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-agent — the agent as documented Rust code (P4 deliverable)"
repository.workspace = true

[dependencies]
argus-core = { workspace = true }
argus-llm = { workspace = true }
argus-crypto = { workspace = true }
argus-slop = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
serde_json = { workspace = true }
