[package]
name = "argus-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-agent — the agent as documented Rust code (P4 deliverable)"
repository.workspace = true
# Published to crates.io as a public library. The agent runtime is
# used by the 7 user-facing argus crates (powers argus-verify and
# the MCP specialist surfaces).
[dependencies]
apohara-argus-core = { workspace = true }
argus-llm = { workspace = true }
argus-crypto = { workspace = true }
argus-slop = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
serde_json = { workspace = true }
