[package]
name = "argus-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Unified CLI for ARGUS. `argus health`, `argus verify`, `argus guard`, `argus lens` — all surfaces in one binary."
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
publish = true

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
argus-core = { workspace = true }
argus-otel = { workspace = true }
argus-llm = { workspace = true }
argus-slop = { workspace = true }
argus-crypto = { workspace = true }
argus-github = { workspace = true }
argus-guard = { workspace = true }
argus-verify = { workspace = true }
argus-lens = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
