[package]
name = "argus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-core — types, errors, prompts, config"
repository.workspace = true
# Internal library — not published to crates.io. Surface to users goes
# through the `argus-cli` / `argus-guard` / `argus-verify` / `argus-lens`
# / `argus-dashboard` / `argus-llm` / `argus-mcp` public crates.
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
pulldown-cmark = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
blake3 = { workspace = true }
