[package]
name = "argus-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-crypto — ed25519 signing, BLAKE3 hash chain, SPIFFE-like IDs"
repository.workspace = true
# Internal library — not published to crates.io. The BLAKE3 + Ed25519
# audit chain is private to ARGUS; consumers depend on the public CLI
# / server surfaces, not the cryptographic primitives directly.
[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
hex = "0.4"
uuid = { workspace = true }
spiffe = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
