[package]
name = "argus-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ARGUS crate: argus-crypto — ed25519 signing, BLAKE3 hash chain, SPIFFE-like IDs"
repository.workspace = true
# Published to crates.io as a public library. Exposes the BLAKE3 +
# Ed25519 audit chain primitives (with SPIFFE-like IDs) used by the
# 7 user-facing argus crates; also lets external integrations verify
# the audit chain directly.
[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = "0.22"
hex = "0.4"
uuid = { workspace = true }
spiffe = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
